attempt to fix white space

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -38,6 +38,7 @@
 html,
 body {
   overflow-x: hidden;
+  background-color: #000
 }
 
 html {
